WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149232
Possible small iOS PLT regression from
r189537
https://bugs.webkit.org/show_bug.cgi?id=149232
Summary
Possible small iOS PLT regression from r189537
Chris Dumez
Reported
2015-09-16 14:52:00 PDT
Dewei says <
http://trac.webkit.org/changeset/189537
> may have regressed PLT a bit on iOS. This change does add a couple of extra branches to throw exception. We should probably mark those branches as UNLIKELY() as we already do for other similar checks in the JS bindings.
Attachments
Patch
(16.04 KB, patch)
2015-09-16 15:06 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2015-09-16 15:06:55 PDT
Created
attachment 261329
[details]
Patch
WebKit Commit Bot
Comment 2
2015-09-16 17:10:49 PDT
Comment on
attachment 261329
[details]
Patch Clearing flags on attachment: 261329 Committed
r189887
: <
http://trac.webkit.org/changeset/189887
>
WebKit Commit Bot
Comment 3
2015-09-16 17:10:54 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug